# AIXMLFuzzer

./: .gitignore  Cargo.toml  README.md  XSD_CONSTRAINTS_ANALYSIS.md  debug_schema  example.xsd  test_debug  test_debug_fuzzer  validate_violations.sh
src/: fuzzer.rs  lib.rs  main.rs  xml_generator.rs  xsd.rs
