[package]
name = "aixmlfuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
quick-xml = { version = "0.31", features = ["serialize"] }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

